clusters/apps/env/production/games/foundry-vtt/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns/public: "true"
    opn.internal-dns.kubernetes.io/target: &target external-ingress.${SECRET_DOMAIN}
    opn.internal-dns.kubernetes.io/hostname: &hostname ${INGRESSROUTE_SUBDOMAIN}.${FAMILY_DOMAIN}
    pi.internal-dns.kubernetes.io/target: *target
    pi.internal-dns.kubernetes.io/hostname: *hostname
    gandi.external-dns.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    gandi.external-dns.kubernetes.io/hostname: *hostname
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: ${APP}
spec:
  ingressClassName: traefik-external
  rules:
    - host: *hostname
      http:
        paths:
          - backend:
              service:
                name: foundry-vtt
                port:
                  number: 30000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *hostname
      secretName: heyjohn-wildcard-certificate
